--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "less": "^3.12.2",
+    "less-loader": "^7.1.0",
+    "style-resources-loader": "^1.4.1",
+    "view-design": "^4.4.0",
+    "vue": "^2.6.11",
+    "vue-cli-plugin-style-resources-loader": "^0.1.4",
+    "vue-router": "^3.4.9",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
