--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
+    "moment": "^2.29.1",
     "style-resources-loader": "^1.4.1",
     "view-design": "^4.4.0",
     "vue": "^2.6.11",
