添加二维码

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "view-design": "^4.4.0",
     "vue": "^2.6.11",
     "vue-cli-plugin-style-resources-loader": "^0.1.4",
+    "vue-print-nb": "^1.5.0",
     "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
   },
